--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,12 +5,17 @@
     font-style: normal;
 }
 
+
 body {
     color: #717171 !important;
 }
 
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     font-family: "Cabin", Arial, sans-serif !important;;
+}
+
+.fa-btn {
+    margin-right: 6px;
 }
 
 .navbar-default {
