--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,6 +74,13 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     width: 100%;
 }
 
+.nota-aprovado{
+    color: #2e6da4;
+}
+.nota-reprovado{
+  color: #ad1d28;
+}
+
 .error{
     color: #d32b2b;
     padding-left: 30px;
