--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,6 +5,28 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'Material Icons';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Material Icons'), local('MaterialIcons-Regular'), url(https://fonts.gstatic.com/s/materialicons/v18/2fcrYFNaTjcS6g4U3t-Y5ZjZjT5FdEJ140U2DJYC3mY.woff2) format('woff2');
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
+}
 
 body {
     color: #717171 !important;
@@ -50,7 +72,6 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 }
 
-
 .navbar-login-session {
     padding: 10px;
     padding-bottom: 0px;
@@ -74,14 +95,15 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     width: 100%;
 }
 
-.nota-aprovado{
+.nota-aprovado {
     color: #2e6da4;
 }
-.nota-reprovado{
-  color: #ad1d28;
+
+.nota-reprovado {
+    color: #ad1d28;
 }
 
-.error{
+.error {
     color: #d32b2b;
     padding-left: 30px;
 }
@@ -94,57 +116,58 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     overflow: hidden;
 }
 
-.panel-default>.panel-heading .badge{
+.panel-default > .panel-heading .badge {
     background-color: #312552;
     color: #FFFFFF;
 }
 
-.questao input[type=radio],.resposta-excluir {
-   /* margin-top: 10px !important;*/
+.questao input[type=radio], .resposta-excluir {
+    /* margin-top: 10px !important;*/
     font-size: 1.5em;
     color: #ac2925;
     cursor: pointer;
 }
 
-.questao-excluir{
+.questao-excluir {
 
 }
 
-.questao-detalhe-titulo{
+.questao-detalhe-titulo {
     font-weight: bold;
 }
 
-.questao-detalhe{
+.questao-detalhe {
     background-color: #d9edf7;
     border-color: #bce8f1;
     color: #3a87ad;
     color: #333;
     padding: 8px 35px 8px 14px;
     margin-bottom: 20px;
-    text-shadow: 0 1px 0 rgba(255,255,255,0.5);
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
     border: 1px solid #fbeed5;
     border-radius: 5px;
 }
 
-.contador{
+.contador {
     padding-top: 1.8em;
     padding-bottom: 1px;
 }
+
 .contador:not(:first-child) {
     border-top: 1px solid #c4c4c4;
 }
 
-.contador .badge{
+.contador .badge {
     padding: 8px;
     margin-right: 10px;
     background-color: #c4c4c4;
 }
 
-.contador p{
+.contador p {
     font-size: 1em;
 }
 
-.contador p:last-child{
+.contador p:last-child {
     font-size: 1em;
     height: 1em;
 }
@@ -174,20 +197,20 @@ footer.site-footer .menu li a {
     margin-top: 0px;
 }
 
-.avaliacao span{
+.avaliacao span {
     font-size: 1em;
     color: gold;
 
 }
 
-.avaliacao p{
+.avaliacao p {
     font-size: 1.5em;
 }
 
-.pager li>a:hover
-{
+.pager li > a:hover {
     color: #2c2753;
 }
+
 .site-footer-credito {
     margin-top: 60px;
     background-color: #2a1616;
@@ -205,7 +228,7 @@ footer.site-footer .menu li a {
     padding: 0;
 }
 
-.destaque{
+.destaque {
     text-align: center;
     font-family: Lato, Sans-serif;
     font-size: 37px;
@@ -237,28 +260,26 @@ footer.site-footer .menu li a {
     cursor: pointer;
 }
 
-
 .destaque > span, .destaque-sub > span {
     color: #ad1d28;
     font-weight: 300;
 }
 
-.jumbotron{
+.jumbotron {
     background-color: #e4e4e4;
     border: 1px solid #cccccc;
     border-radius: 5px;
 }
 
-.box-curso{
+.box-curso {
 
-    height:  100%;
+    height: 100%;
     background-color: #2ca02c;
 }
 
-
 @media (min-width: 1024px) {
 
-    .btn-half-block{
+    .btn-half-block {
         width: 50%;
     }
 
@@ -306,12 +327,12 @@ footer.site-footer .menu li a {
 
 @media (max-width: 768px) {
 
-    .jumbotron{
+    .jumbotron {
         margin-left: 30px;
         margin-right: 30px;
     }
 
-    .btn-half-block{
+    .btn-half-block {
         width: 100%;
     }
 
@@ -327,8 +348,8 @@ footer.site-footer .menu li a {
         border-color: #911821 !important;
     }
 
-    .navbar-login .divider{
-        background-color: #FFFFFF!important;
+    .navbar-login .divider {
+        background-color: #FFFFFF !important;
     }
 
     .navbar-login {
@@ -365,7 +386,7 @@ footer.site-footer .menu li a {
         width: 100%;
     }
 
-    .box{
+    .box {
         margin: 12px;
     }
 
@@ -385,8 +406,732 @@ footer.site-footer .menu li a {
 
     }
 
-    .questao-detalhe{
+    .questao-detalhe {
 
     }
 
+}
+
+.bg-red {
+    background-color: #F44336 !important;
+    color: #fff;
+}
+
+.bg-red .content .text,
+.bg-red .content .number {
+    color: #fff !important;
+}
+
+.bg-pink {
+    background-color: #E91E63 !important;
+    color: #fff;
+}
+
+.bg-pink .content .text,
+.bg-pink .content .number {
+    color: #fff !important;
+}
+
+.bg-purple {
+    background-color: #9C27B0 !important;
+    color: #fff;
+}
+
+.bg-purple .content .text,
+.bg-purple .content .number {
+    color: #fff !important;
+}
+
+.bg-deep-purple {
+    background-color: #673AB7 !important;
+    color: #fff;
+}
+
+.bg-deep-purple .content .text,
+.bg-deep-purple .content .number {
+    color: #fff !important;
+}
+
+.bg-indigo {
+    background-color: #3F51B5 !important;
+    color: #fff;
+}
+
+.bg-indigo .content .text,
+.bg-indigo .content .number {
+    color: #fff !important;
+}
+
+.bg-blue {
+    background-color: #2196F3 !important;
+    color: #fff;
+}
+
+.bg-blue .content .text,
+.bg-blue .content .number {
+    color: #fff !important;
+}
+
+.bg-light-blue {
+    background-color: #03A9F4 !important;
+    color: #fff;
+}
+
+.bg-light-blue .content .text,
+.bg-light-blue .content .number {
+    color: #fff !important;
+}
+
+.bg-cyan {
+    background-color: #00BCD4 !important;
+    color: #fff;
+}
+
+.bg-cyan .content .text,
+.bg-cyan .content .number {
+    color: #fff !important;
+}
+
+.bg-teal {
+    background-color: #009688 !important;
+    color: #fff;
+}
+
+.bg-teal .content .text,
+.bg-teal .content .number {
+    color: #fff !important;
+}
+
+.bg-green {
+    background-color: #4CAF50 !important;
+    color: #fff;
+}
+
+.bg-green .content .text,
+.bg-green .content .number {
+    color: #fff !important;
+}
+
+.bg-light-green {
+    background-color: #8BC34A !important;
+    color: #fff;
+}
+
+.bg-light-green .content .text,
+.bg-light-green .content .number {
+    color: #fff !important;
+}
+
+.bg-lime {
+    background-color: #CDDC39 !important;
+    color: #fff;
+}
+
+.bg-lime .content .text,
+.bg-lime .content .number {
+    color: #fff !important;
+}
+
+.bg-yellow {
+    background-color: #ffe821 !important;
+    color: #fff;
+}
+
+.bg-yellow .content .text,
+.bg-yellow .content .number {
+    color: #fff !important;
+}
+
+.bg-amber {
+    background-color: #FFC107 !important;
+    color: #fff;
+}
+
+.bg-amber .content .text,
+.bg-amber .content .number {
+    color: #fff !important;
+}
+
+.bg-orange {
+    background-color: #FF9800 !important;
+    color: #fff;
+}
+
+.bg-orange .content .text,
+.bg-orange .content .number {
+    color: #fff !important;
+}
+
+.bg-deep-orange {
+    background-color: #FF5722 !important;
+    color: #fff;
+}
+
+.bg-deep-orange .content .text,
+.bg-deep-orange .content .number {
+    color: #fff !important;
+}
+
+.bg-brown {
+    background-color: #795548 !important;
+    color: #fff;
+}
+
+.bg-brown .content .text,
+.bg-brown .content .number {
+    color: #fff !important;
+}
+
+.bg-grey {
+    background-color: #9E9E9E !important;
+    color: #fff;
+}
+
+.bg-grey .content .text,
+.bg-grey .content .number {
+    color: #fff !important;
+}
+
+.bg-blue-grey {
+    background-color: #607D8B !important;
+    color: #fff;
+}
+
+.bg-blue-grey .content .text,
+.bg-blue-grey .content .number {
+    color: #fff !important;
+}
+
+.bg-black {
+    background-color: #000000 !important;
+    color: #fff;
+}
+
+.bg-black .content .text,
+.bg-black .content .number {
+    color: #fff !important;
+}
+
+.bg-white {
+    background-color: #ffffff !important;
+    color: #fff;
+}
+
+.bg-white .content .text,
+.bg-white .content .number {
+    color: #fff !important;
+}
+
+.col-red {
+    color: #F44336 !important;
+}
+
+.col-pink {
+    color: #E91E63 !important;
+}
+
+.col-purple {
+    color: #9C27B0 !important;
+}
+
+.col-deep-purple {
+    color: #673AB7 !important;
+}
+
+.col-indigo {
+    color: #3F51B5 !important;
+}
+
+.col-blue {
+    color: #2196F3 !important;
+}
+
+.col-light-blue {
+    color: #03A9F4 !important;
+}
+
+.col-cyan {
+    color: #00BCD4 !important;
+}
+
+.col-teal {
+    color: #009688 !important;
+}
+
+.col-green {
+    color: #4CAF50 !important;
+}
+
+.col-light-green {
+    color: #8BC34A !important;
+}
+
+.col-lime {
+    color: #CDDC39 !important;
+}
+
+.col-yellow {
+    color: #ffe821 !important;
+}
+
+.col-amber {
+    color: #FFC107 !important;
+}
+
+.col-orange {
+    color: #FF9800 !important;
+}
+
+.col-deep-orange {
+    color: #FF5722 !important;
+}
+
+.col-brown {
+    color: #795548 !important;
+}
+
+.col-grey {
+    color: #9E9E9E !important;
+}
+
+.col-blue-grey {
+    color: #607D8B !important;
+}
+
+.col-black {
+    color: #000000 !important;
+}
+
+.col-white {
+    color: #ffffff !important;
+}
+
+/* Infobox ===================================== */
+.info-box {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    height: 80px;
+    display: flex;
+    cursor: default;
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.info-box .icon {
+    display: inline-block;
+    text-align: center;
+    background-color: rgba(0, 0, 0, 0.12);
+    width: 80px;
+}
+
+.info-box .icon i {
+    color: #fff;
+    font-size: 50px;
+    line-height: 80px;
+}
+
+.info-box .icon .chart.chart-bar {
+    height: 100%;
+    line-height: 100px;
+}
+
+.info-box .icon .chart.chart-bar canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box .icon .chart.chart-pie {
+    height: 100%;
+    line-height: 123px;
+}
+
+.info-box .icon .chart.chart-pie canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box .icon .chart.chart-line {
+    height: 100%;
+    line-height: 115px;
+}
+
+.info-box .icon .chart.chart-line canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box .content {
+    display: inline-block;
+    padding: 7px 10px;
+}
+
+.info-box .content .text {
+    font-size: 13px;
+    margin-top: 11px;
+    color: #555;
+}
+
+.info-box .content .number {
+    font-weight: normal;
+    font-size: 26px;
+    margin-top: -4px;
+    color: #555;
+}
+
+.info-box.hover-zoom-effect .icon {
+    overflow: hidden;
+}
+
+.info-box.hover-zoom-effect .icon i {
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.info-box.hover-zoom-effect:hover .icon i {
+    opacity: 0.4;
+    -moz-transform: rotate(-32deg) scale(1.4);
+    -ms-transform: rotate(-32deg) scale(1.4);
+    -o-transform: rotate(-32deg) scale(1.4);
+    -webkit-transform: rotate(-32deg) scale(1.4);
+    transform: rotate(-32deg) scale(1.4);
+}
+
+.info-box.hover-expand-effect:after {
+    /* background-color: rgba(0, 0, 0, 0.05); */
+    /* content: "."; */
+    /* position: absolute; */
+    /* left: 80px; */
+    /* top: 0; */
+    /* width: 0; */
+    /* height: 100%; */
+    /* color: transparent; */
+    -moz-transition: all 0.95s;
+    -o-transition: all 0.95s;
+    /* -webkit-transition: all 0.95s; */
+    /* transition: all 0.95s; */
+}
+
+.info-box.hover-expand-effect:hover:after {
+    width: 100%;
+}
+
+.info-box-2 {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    height: 80px;
+    display: flex;
+    cursor: default;
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.info-box-2 .icon {
+    display: inline-block;
+    text-align: center;
+    width: 80px;
+}
+
+.info-box-2 .icon i {
+    color: #fff;
+    font-size: 50px;
+    line-height: 80px;
+}
+
+.info-box-2 .chart.chart-bar {
+    height: 100%;
+    line-height: 105px;
+}
+
+.info-box-2 .chart.chart-bar canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-2 .chart.chart-pie {
+    height: 100%;
+    line-height: 123px;
+}
+
+.info-box-2 .chart.chart-pie canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-2 .chart.chart-line {
+    height: 100%;
+    line-height: 115px;
+}
+
+.info-box-2 .chart.chart-line canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-2 .content {
+    display: inline-block;
+    padding: 7px 10px;
+}
+
+.info-box-2 .content .text {
+    font-size: 13px;
+    margin-top: 11px;
+    color: #555;
+}
+
+.info-box-2 .content .number {
+    font-weight: normal;
+    font-size: 26px;
+    margin-top: -4px;
+    color: #555;
+}
+
+.info-box-2.hover-zoom-effect .icon {
+    overflow: hidden;
+}
+
+.info-box-2.hover-zoom-effect .icon i {
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.info-box-2.hover-zoom-effect:hover .icon i {
+    opacity: 0.4;
+    -moz-transform: rotate(-32deg) scale(1.4);
+    -ms-transform: rotate(-32deg) scale(1.4);
+    -o-transform: rotate(-32deg) scale(1.4);
+    -webkit-transform: rotate(-32deg) scale(1.4);
+    transform: rotate(-32deg) scale(1.4);
+}
+
+.info-box-2.hover-expand-effect:after {
+    background-color: rgba(0, 0, 0, 0.05);
+    content: ".";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 100%;
+    color: transparent;
+    -moz-transition: all 0.95s;
+    -o-transition: all 0.95s;
+    -webkit-transition: all 0.95s;
+    transition: all 0.95s;
+}
+
+.info-box-2.hover-expand-effect:hover:after {
+    width: 100%;
+}
+
+.info-box-3 {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    height: 80px;
+    display: flex;
+    cursor: default;
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.info-box-3 .icon {
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    text-align: center;
+}
+
+.info-box-3 .icon i {
+    color: rgba(0, 0, 0, 0.15);
+    font-size: 60px;
+}
+
+.info-box-3 .chart {
+    margin-right: 5px;
+}
+
+.info-box-3 .chart.chart-bar {
+    height: 100%;
+    line-height: 50px;
+}
+
+.info-box-3 .chart.chart-bar canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-3 .chart.chart-pie {
+    height: 100%;
+    line-height: 34px;
+}
+
+.info-box-3 .chart.chart-pie canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-3 .chart.chart-line {
+    height: 100%;
+    line-height: 40px;
+}
+
+.info-box-3 .chart.chart-line canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-3 .content {
+    display: inline-block;
+    padding: 7px 16px;
+}
+
+.info-box-3 .content .text {
+    font-size: 13px;
+    margin-top: 11px;
+    color: #555;
+}
+
+.info-box-3 .content .number {
+    font-weight: normal;
+    font-size: 26px;
+    margin-top: -4px;
+    color: #555;
+}
+
+.info-box-3.hover-zoom-effect .icon i {
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.info-box-3.hover-zoom-effect:hover .icon i {
+    opacity: 0.4;
+    -moz-transform: rotate(-32deg) scale(1.4);
+    -ms-transform: rotate(-32deg) scale(1.4);
+    -o-transform: rotate(-32deg) scale(1.4);
+    -webkit-transform: rotate(-32deg) scale(1.4);
+    transform: rotate(-32deg) scale(1.4);
+}
+
+.info-box-3.hover-expand-effect:after {
+    background-color: rgba(0, 0, 0, 0.05);
+    content: ".";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 100%;
+    color: transparent;
+    -moz-transition: all 0.95s;
+    -o-transition: all 0.95s;
+    -webkit-transition: all 0.95s;
+    transition: all 0.95s;
+}
+
+.info-box-3.hover-expand-effect:hover:after {
+    width: 100%;
+}
+
+.info-box-4 {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+    height: 80px;
+    display: flex;
+    cursor: default;
+    background-color: #fff;
+    position: relative;
+    overflow: hidden;
+    margin-bottom: 30px;
+}
+
+.info-box-4 .icon {
+    position: absolute;
+    right: 10px;
+    bottom: 2px;
+    text-align: center;
+}
+
+.info-box-4 .icon i {
+    color: rgba(0, 0, 0, 0.15);
+    font-size: 60px;
+}
+
+.info-box-4 .chart {
+    margin-right: 5px;
+}
+
+.info-box-4 .chart.chart-bar {
+    height: 100%;
+    line-height: 50px;
+}
+
+.info-box-4 .chart.chart-bar canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-4 .chart.chart-pie {
+    height: 100%;
+    line-height: 34px;
+}
+
+.info-box-4 .chart.chart-pie canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-4 .chart.chart-line {
+    height: 100%;
+    line-height: 40px;
+}
+
+.info-box-4 .chart.chart-line canvas {
+    vertical-align: baseline !important;
+}
+
+.info-box-4 .content {
+    display: inline-block;
+    padding: 7px 16px;
+}
+
+.info-box-4 .content .text {
+    font-size: 13px;
+    margin-top: 11px;
+    color: #555;
+}
+
+.info-box-4 .content .number {
+    font-weight: normal;
+    font-size: 26px;
+    margin-top: -4px;
+    color: #555;
+}
+
+.info-box-4.hover-zoom-effect .icon i {
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    transition: all 0.3s ease;
+}
+
+.info-box-4.hover-zoom-effect:hover .icon i {
+    opacity: 0.4;
+    -moz-transform: rotate(-32deg) scale(1.4);
+    -ms-transform: rotate(-32deg) scale(1.4);
+    -o-transform: rotate(-32deg) scale(1.4);
+    -webkit-transform: rotate(-32deg) scale(1.4);
+    transform: rotate(-32deg) scale(1.4);
+}
+
+.info-box-4.hover-expand-effect:after {
+    background-color: rgba(0, 0, 0, 0.05);
+    content: ".";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 100%;
+    color: transparent;
+    -moz-transition: all 0.95s;
+    -o-transition: all 0.95s;
+    -webkit-transition: all 0.95s;
+    transition: all 0.95s;
+}
+
+.info-box-4.hover-expand-effect:hover:after {
+    width: 100%;
 }
