--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,6 +78,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
     padding-top: 0px;
 }
 
+
 .icon-size {
     font-size: 87px;
 }
@@ -197,6 +198,11 @@ footer.site-footer .menu li a {
     margin-top: 0px;
 }
 
+.first-letter {
+    font-weight: bold;
+    color: #dddddd;
+}
+
 .avaliacao span {
     font-size: 1em;
     color: gold;
@@ -212,7 +218,7 @@ footer.site-footer .menu li a {
 }
 
 .site-footer-credito {
-    margin-top: 60px;
+
     background-color: #2a1616;
     padding-bottom: 10px;
     padding-top: 20px;
@@ -226,6 +232,11 @@ footer.site-footer .menu li a {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+
+.site-footer h4{
+    font-family: "Neuropol-Regular", Arial, sans-serif !important;
+    margin-bottom: 30px;
 }
 
 .destaque {
@@ -277,10 +288,17 @@ footer.site-footer .menu li a {
     background-color: #2ca02c;
 }
 
+
+
 @media (min-width: 1024px) {
 
     .btn-half-block {
         width: 50%;
+    }
+
+    .espaco-70 {
+        margin-top: 70px;
+        margin-bottom: 70px;
     }
 
     .espaco-40 {
@@ -323,6 +341,7 @@ footer.site-footer .menu li a {
         min-height: 100px;
     }
 
+
 }
 
 @media (max-width: 768px) {
@@ -360,6 +379,11 @@ footer.site-footer .menu li a {
 
     .site-footer img {
         width: 100%;
+    }
+
+    .espaco-70 {
+        margin-top: 60px;
+        margin-bottom: 20px;
     }
 
     .espaco-40 {
@@ -410,6 +434,9 @@ footer.site-footer .menu li a {
 
     }
 
+    .nav-pesquisa{
+        padding: 15px;
+    }
 }
 
 .bg-red {
