--- a/public/css/style.css
+++ b/public/css/style.css
@@ -738,11 +738,12 @@ footer.site-footer .menu li a {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
     height: 80px;
     display: flex;
-    cursor: default;
     background-color: #fff;
     position: relative;
     overflow: hidden;
     margin-bottom: 30px;
+    cursor: pointer;
+    text-decoration: none;
 }
 
 .info-box .icon {
